# forcateri

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml  report_format_guideline.ipynb  requirements.txt  setup.py
.github/workflows/: docker-image.yml
clearml_entry/: clearml_entry.py  test_clearml.py  test_pipeline.py
configs/: tcn_pipeline.yaml  tft_pipeline.yaml
doc/: class_diagram.dia  result_reporter.puml
forcateri/: __init__.py  defaultparamsmixin.py
forcateri/baltbestapi/: baltbestaggregatedapidata.py  baltbestapi.py  baltbestapidata.py  test.py
forcateri/controls/: clearmlsingletaskpipeline.py  pipeline.py
forcateri/data/: adapterinput.py  cachedapidata.py  clearmldatamixin.py  dataprovider.py  datasource.py  forcateri.code-workspace  seriesrole.py  timeseries.py  timeseriesexceptions.py
forcateri/model/: __init__.py  dartsmodeladapter.py  huggingmodeladapter.py  modeladapter.py  modelexceptions.py  pytorchmodeladapter.py  test.py
forcateri/model/dartsmodels/: dartsmodeladapter.py  dartstcnmodel.py  dartstftmodel.py  test.py
forcateri/reporting/: __init__.py  clearmlreporter.py  dimwise_aggregated_quantile_loss.py  dimwiseaggregatedmetric.py  dimwiseaggregatedquantileloss.py  localresultreporter.py  metric.py  metric_aggregations.py  plotting.py  resultreporter.py
forcateri/reporting/clearmlreporter/: clearmlreporter.py  cleearmlreporter.py
forcateri/utils/: config_utils.py  decorators.py
notebooks/: 00_time_series_frame_structure.ipynb  01_time_series_creation.ipynb  02_hints_for_metric_computation.ipynb  model_test.ipynb  ts_test.ipynb
tests/: __init__.py  test_timeseries.py
tests/test_data/test_timeseries/: common_fixtures.py  test_is_matching_format.py  test_timeseries_initialization.py
