[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "forcateri"
authors = [
    {name = "Alexander Anisimov", email = "alexander.anisimov@dfki.de"},
    {name = "Dinar Orazgaliyev", email = "dinar.orazgaliyev@dfki.de"},
]
version = "0.5.7"
dependencies = [
  "adagio",
  "aiohappyeyeballs",
  "aiohttp",
  "aiosignal",
  "anyio",
  "appdirs",
  "argon2-cffi",
  "argon2-cffi-bindings",
  "arrow",
  "asttokens",
  "async-lru",
  "async-timeout",
  "attrs",
  "Babel",
  "beautifulsoup4",
  "bleach",
  "catboost",
  "certifi",
  "cffi",
  "charset-normalizer",
  "clearml",
  "cloudpickle",
  "cmdstanpy",
  "comm",
  "contourpy",
  "coreforecast",
  "cycler",
  "Cython",
  "darts",
  "debugpy",
  "decorator",
  "defusedxml",
  "exceptiongroup",
  "executing",
  "fastjsonschema",
  "filelock",
  "fonttools",
  "fqdn",
  "frozenlist",
  "fs",
  "fsspec",
  "fugue",
  "furl",
  "graphviz",
  "h11",
  "holidays",
  "httpcore",
  "httpx",
  "idna",
  "importlib_resources",
  "ipykernel",
  "ipython",
  "ipywidgets",
  "isoduration",
  "jedi",
  "Jinja2",
  "joblib",
  "json5",
  "jsonpointer",
  "jsonschema",
  "jsonschema-specifications",
  "jupyter",
  "jupyter-console",
  "jupyter-events",
  "jupyter-lsp",
  "jupyter_client",
  "jupyter_core",
  "jupyter_server",
  "jupyter_server_terminals",
  "jupyterlab",
  "jupyterlab_pygments",
  "jupyterlab_server",
  "jupyterlab_widgets",
  "kiwisolver",
  "lightgbm",
  "lightning-utilities",
  "llvmlite",
  "MarkupSafe",
  "matplotlib",
  "matplotlib-inline",
  "meteostat",
  "mistune",
  "mpmath",
  "multidict",
  "nbclient",
  "nbconvert",
  "nbformat",
  "nest-asyncio",
  "networkx",
  "nfoursid",
  "notebook",
  "notebook_shim",
  "numba",
  "numpy",
  "nvidia-cublas-cu12",
  "nvidia-cuda-cupti-cu12",
  "nvidia-cuda-nvrtc-cu12",
  "nvidia-cuda-runtime-cu12",
  "nvidia-cudnn-cu12",
  "nvidia-cufft-cu12",
  "nvidia-curand-cu12",
  "nvidia-cusolver-cu12",
  "nvidia-cusparse-cu12",
  "nvidia-nccl-cu12",
  "nvidia-nvjitlink-cu12",
  "nvidia-nvtx-cu12",
  "orderedmultidict",
  "overrides",
  "packaging",
  "pandas",
  "pandocfilters",
  "parso",
  "pathlib2",
  "patsy",
  "pexpect",
  "pillow",
  "platformdirs",
  "plotly",
  "pmdarima",
  "prometheus_client",
  "prompt_toolkit",
  "prophet",
  "protobuf",
  "psutil",
  "ptyprocess",
  "pure_eval",
  "pyarrow",
  "pycparser",
  "Pygments",
  "PyJWT",
  "pylance",
  "pyod",
  "pyparsing",
  "python-dateutil",
  "python-dotenv",
  "python-json-logger",
  "pytorch-lightning",
  "pytz",
  "PyYAML",
  "pyzmq",
  "qtconsole",
  "QtPy",
  "referencing",
  "requests",
  "rfc3339-validator",
  "rfc3986-validator",
  "rpds-py",
  "seaborn",
  "scikit-learn",
  "scipy",
  "Send2Trash",
  "shap",
  "six",
  "slicer",
  "sniffio",
  "soupsieve",
  "stack-data",
  "stanio",
  "statsforecast",
  "statsmodels",
  "sympy",
  "tbats",
  "tenacity",
  "tensorboardX",
  "terminado",
  "threadpoolctl",
  "tinycss2",
  "tomli",
  "torch",
  "torchmetrics",
  "tornado",
  "tqdm",
  "traitlets",
  "triad",
  "triton",
  "types-python-dateutil",
  "typing_extensions",
  "tzdata",
  "u8darts",
  "uri-template",
  "urllib3",
  "utilsforecast",
  "wcwidth",
  "webcolors",
  "webencodings",
  "websocket-client",
  "widgetsnbextension",
  "xarray",
  "xgboost",
  "yarl",
]

[tool.setuptools.packages]
find = {}
